[package]
name = "local_ipaddress"
version = "0.1.2"
description = "Get your local IP address."
authors = ["egmkang wang <egmkang@outlook.com>"]
edition = "2018"
license = "MIT"

repository = "https://github.com/egmkang/local_ipaddress"
homepage = "https://github.com/egmkang/local_ipaddress"
document = "https://docs.rs/local_ipaddress"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
